<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.leon.scrapbook.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colosseumText"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor"
        android:id="@+id/colosseumText" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="140dp"
        android:id="@+id/colosseumImage"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/colosseum"
        android:contentDescription="@string/roman_colosseum"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/parthenonText"
        android:id="@+id/parthenonText"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="140dp"
        android:id="@+id/parthenonImage"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/parthenon"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/parthenon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rushmoreText"
        android:id="@+id/rushmoreText"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="140dp"
        android:id="@+id/rushmoreImage"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/rushmore"
        android:contentDescription="@string/president_mountain" />
</LinearLayout>
